<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort_featured"
        android:orderInCategory="1"
        android:title="@string/sort_featured"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_most_recent"
        android:orderInCategory="1"
        android:title="@string/sort_recent"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_most_likes"
        android:orderInCategory="1"
        android:title="@string/sort_likes"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_most_viewed"
        android:orderInCategory="1"
        android:title="@string/sort_views"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_most_discussed"
        android:orderInCategory="1"
        android:title="@string/sort_discussed"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_list_posts"
        android:orderInCategory="1"
        android:title="@string/sort_posts"
        app:showAsAction="never" />
</menu>